# not1mm

./: .gitignore  README.md  main.py  pyproject.toml  rebuild.sh  requirements.txt  update_version.sh
.github/workflows/: python-package.yml
not1mm/: __init__.py  __main__.py  bandmap.py  callprofile.py  checkwindow.py  fsutils.py  logwindow.py  mapwindow.py  qsoeditwindow.py  vfo.py
not1mm/cat/: RigState.py  __init__.py  flrig.py  manual.py  omnirig.py  rigctld.py
not1mm/contest/: AbstractContest.py  GeneralLogging.py  GeneralSerialLogging.py  __init__.py  arrl_ss_phone.py  general_logging.py
not1mm/data/: AdifImport.ui  ContestEdit.ui  StationSettings.ui  about.ui  bandmap.ui  checkwindow.ui  configuration.ui  contests.sql  logwindow.ui  main.ui  new_contest.ui  qso_edit_sheet.ui  vfo.ui  world_map.ui
not1mm/lib/: about.py  cat_interface.py  database.py  edit_station.py  event.py  event_model.py  flags.py  flowlayout.py  ham_utility.py  lookup.py  multicast.py  n1mm.py  plugin_common.py  settings.py  timeutils.py
not1mm/model/: Enums.py  inmemory.py  persistent.py  persistent_migrations.py
not1mm/plugins/: 10_10_spring_cw.py  arrl_ss_cw.py  arrl_ss_phone.py  general_logging.py
not1mm/qtcomponents/: AdifExport.py  AdifImport.py  CabrilloExport.py  ContestEdit.py  ContestFieldEventFilter.py  CustomItemDelegate.py  DoubleItemDelegate.py  EmacsCursorEventFilter.py  QsoEntryField.py  QsoFieldDelegate.py  StationSettings.py  StationSettings.ui  SvgIcon.py  VoiceAudio.py  __init__.py  (+2 more)
qsourcelogger/: __init__.py  __main__.py  bandmap.py  callprofile.py  checkwindow.py  fsutils.py  logwindow.py  mapwindow.py  qsoeditwindow.py  vfo.py
(+97 files in other folders)
