[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qsource-logger"
version = "24.3.24.1"
description = "QSOurce Logger - Amateur radio log book and utilities"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name="Kyle Boyle", email="kyle@kyleboyle.com" },
  { name="Michael Bridak", email="michael.bridak@gmail.com" },
]
dependencies = [
    "PyQt6",
    "requests",
    "dicttoxml",
    "xmltodict",
    "psutil",
    "pyserial",
    "sounddevice",
    "soundfile",
    "numpy",
    "rapidfuzz",
    "appdata",
    "pyqtdarktheme",
    'levenshtein',
    'peewee',
    'feedparser',
    'cartopy',
    "pywin32; sys_platform == 'windows'"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Topic :: Communications :: Ham Radio",
]

[project.urls]
"Homepage" = "https://github.com/kyleboyle/qsourcelogger"
"Bug Tracker" = "https://github.com/kyleboyle/qsourcelogger/issues"

[tool.setuptools.packages.find]
where = ["."]

exclude = ["qsourcelogger.testing*", "qsourcelogger.qsourcelogger.testing*", "testing*", "usb_vfo_knob*",]

[tool.setuptools.package-data]
"qsourcelogger.data" = ["*.json", "*.txt", "*.SCP", "*.ui", "*.ttf", "*.desktop", "*.png", "*.qss", "*.sql", "*.html",]
"qsourcelogger.data.phonetics" = ["*.wav",]
"qsourcelogger.icon" = ["*.png",]

[project.scripts]
qsourcelogger = "qsourcelogger.__main__:run"
